--- a/.github/workflows/doosil-pages.yml
+++ b/.github/workflows/doosil-pages.yml
@@ -3,24 +3,26 @@ name: Deploy static site to GitHub Pages
 on:
   push:
     branches: [ main ]
-
-concurrency:
-  group: pages-deploy
-  cancel-in-progress: true   # 새 실행이 오면 이전 실행을 자동 취소
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # 여기에 빌드 필요 없으면 그대로 둠
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: .   # 정적 사이트 루트
+          path: ./public   # ← 배포할 폴더(네 프로젝트에 맞게 바꿔)
 
   deploy:
     needs: build
@@ -31,3 +33,4 @@ jobs:
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
+
