--- a/.github/workflows/doosil-pages.yml
+++ b/.github/workflows/doosil-pages.yml
@@ -19,10 +19,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # 여기에 빌드 필요 없으면 그대로 둠
+
+      # (선택) 루트에서 불필요한 파일 빼고 올리기 위해 staging 폴더 생성
+      - name: Prepare artifact
+        run: |
+          mkdir site
+          rsync -av \
+            --exclude '.git' \
+            --exclude '.github' \
+            --exclude 'README.md' \
+            --exclude '.DS_Store' \
+            ./ site/
+          # SPA라면 404.html 필요할 수 있음: index.html을 복사
+          [ -f site/404.html ] || cp site/index.html site/404.html
+          # Jekyll 방지 (언더스코어 폴더 사용 시)
+          touch site/.nojekyll
+
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public   # ← 배포할 폴더(네 프로젝트에 맞게 바꿔)
+          path: ./site   # ← 루트 내용을 모아둔 폴더를 업로드
 
   deploy:
     needs: build
@@ -33,4 +48,5 @@ jobs:
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
+
 
