--- a/.github/workflows/doosil-pages.yml
+++ b/.github/workflows/doosil-pages.yml
@@ -9,7 +9,9 @@ permissions:
   contents: read
   pages: write
   id-token: write
-
+  
+environment:
+  name: github-pages
 concurrency:
   group: "pages"
   cancel-in-progress: true
